--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 ## Build generated
 build/
+.build/
 DerivedData/
 
 ## Various settings
@@ -20,6 +21,7 @@ xcuserdata/
 ## Other
 *.moved-aside
 *.xcuserstate
+Packages/
 
 ## Obj-C/Swift specific
 *.hmap
