--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ language: generic
 sudo: required
 dist: trusty
 osx_image: xcode8
+script:
+  # Committing packages to get files into pods/carthage. Need this to test
+  - rm -rf Packages/
+  - eval "$(curl -sL https://swift.vapor.sh/ci)"
